--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,18 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="index.css">
+    <title>Step1</title>
+</head>
+<body>
+    <div class="header"></div>
+    <div class="content-left"></div>
+    <div class="content-mid"></div>
+    <div class="content-right"></div>
+    <div class="footer"></div>
+</body>
+</html>
