--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,22 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="index.css">
+    <title>Step 2</title>
+</head>
+<body>
+    <div class= "top">
+        <div class="small-rectangle"></div>
+        <div class="big-rectangle"></div>
+        <div class="circle"></div>
+    </div>
+    <div class = "middle"><div class="full-rectangle"></div></div>
+    <div class = "bottom">
+        <div class="card"><h1>Hello<br>Friends</h1></div>
+    </div>
+</body>
+</html>
